# dawn-ng

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c
src/crypto/: crypto.c
src/include/: broadcastsocket.h  crypto.h  datastorage.h  dawn_iwinfo.h  dawn_log.h  dawn_uci.h  ieee80211_utils.h  mac_utils.h  memory_utils.h  msghandler.h  multicastsocket.h  networksocket.h  tcpsocket.h  test_storage.h  ubus.h
src/network/: broadcastsocket.c  multicastsocket.c  networksocket.c  tcpsocket.c
src/storage/: datastorage.c
src/test/: test_storage.c
src/utils/: dawn_iwinfo.c  dawn_log.c  dawn_uci.c  ieee80211_utils.c  mac_utils.c  memory_utils.c  msghandler.c  ubus.c  utils.c
